less noise in log